Fix Java 23 to 17 compatibility issues for build
Co-authored-by: commjoen <1457214+commjoen@users.noreply.github.com>